--- a/src/styles/scss/_media.scss
+++ b/src/styles/scss/_media.scss
@@ -245,12 +245,12 @@
     }
     .card{
 
-        height: 60%;
-        min-height: 60vh;
+        height: 50%;
+        min-height: 50vh;
         margin: 0rem 2rem;
 
         .cardText{
-            font-size: .75rem;
+            font-size: .65rem;
         }
 
         .cardLinkText{
